...
                      mainAxisAlignment: MainAxisAlignment.center,
                      crossAxisAlignment: CrossAxisAlignment.stretch,
                      children: snapshot.hasData
                          ? [
                              Text(
                                key: Key(snapshot.requireData.$1 != null
                                    ? 'successMessageKey'
                                    : 'failMessageKey'),
                                snapshot.requireData.$1 != null
                                    ? successMessage
                                    : failMessage,
                                style: const TextStyle(
                                  fontSize: 18,
...
                                height: 10,
                              ),
                              Row(
                                mainAxisAlignment: MainAxisAlignment.end,
                                children: [
                                  GestureDetector(
                                    key: const Key('closeDialogButtonKey'),
                                    onTap: () {
                                      Navigator.pop(context);
                                      if (snapshot.requireData.$1 != null) {
                                        successCallback();
                                      } else {
                                        failCallback();
...
