...
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.end,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        ArchiveIcon(
                          key: const Key('archiveButtonKey'),
                          archive: archive,
                          callback: () => callback(),
                        ),
                        const SizedBox(width: 6),
                        OverviewIcon(document: archive.document),
                        const SizedBox(width: 6),
...
