...
        elevation: 0,
        shadowColor: Colors.transparent,
        backgroundColor: Colors.white,
        foregroundColor: Colors.black,
        leading: Builder(
          builder: (context) => GestureDetector(
            key: const Key('navigationIconKey'),
            child: SizedBox(
              width: 50,
              height: 50,
              child: Center(
                child: Stack(
                  children: [
...
