...
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.end,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        ReviseIcon(
                            key: const Key('reviseButtonKey'),
                            document: audit.document,
                            callback: () => callback()),
                        const SizedBox(width: 6),
                        OverviewIcon(document: audit.document),
                        const SizedBox(width: 6),
                        DownloadOriginalIcon(document: audit.document),
...
