...
                    flex: 1,
                    child: Row(
                      mainAxisAlignment: MainAxisAlignment.end,
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        StatisticIcon(
                            key: const Key('openStatisticsButtonKey'),
                            user: user),
                      ],
                    ),
                  ),
                ],
              ),
...
