...
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.end,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: [
                        OverviewIcon(
                            key: const Key('documentOverviewButtonKey'),
                            document: document),
                        const SizedBox(width: 6),
                        DownloadOriginalIcon(document: document),
                      ],
                    ),
                  ]),
...
